Bug 41648 - i915: [drm] MTRR allocation failed. Graphics performance may suffer.
Summary: i915: [drm] MTRR allocation failed. Graphics performance may suffer.
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Chris Wilson
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-10 06:51 UTC by mlambda
Modified: 2016-12-07 16:20 UTC (History)
5 users (show)

See Also:
i915 platform:
i915 features:


Attachments
kernel config (83.85 KB, text/plain)
2011-10-10 06:52 UTC, mlambda
no flags Details
/proc/cpuinfo (6.79 KB, text/plain)
2011-10-10 06:53 UTC, mlambda
no flags Details
dmesg (62.96 KB, text/plain)
2011-10-10 06:53 UTC, mlambda
no flags Details
dmidecode (9.73 KB, text/plain)
2011-10-10 06:54 UTC, mlambda
no flags Details
lspci -vvnn (33.15 KB, text/plain)
2011-10-10 06:54 UTC, mlambda
no flags Details
/var/log/syslog (221.28 KB, text/plain)
2011-10-10 06:55 UTC, mlambda
no flags Details
/var/log/Xorg.0.log (32.35 KB, text/plain)
2011-10-10 06:56 UTC, mlambda
no flags Details
/proc/mtrr (693 bytes, text/plain)
2011-10-10 06:59 UTC, mlambda
no flags Details
Suppress warning for MTRR allocation failure when using PAT (1.46 KB, patch)
2012-02-20 11:19 UTC, Chris Wilson
no flags Details | Splinter Review

Description mlambda 2011-10-10 06:51:55 UTC
On a HP Pavilion dv7 6104eg notebook I get the following error message with and without the 'enable_mtrr_cleanup' kernel parameter: '[drm] MTRR allocation failed.  Graphics performance may suffer.'

Kernel: mainline git kernel (commit a8062e421f8a5800c83b85ab10c4cefd8409844f) with these patches: http://lists.freedesktop.org/archives/intel-gfx/2011-September/012266.html (see https://bugs.freedesktop.org/show_bug.cgi?id=41343)

Distribution: Ubuntu 11.04 64 bit
uname -a: Linux hp 3.1.0-rc8-intelpatch #1 SMP Tue Oct 4 23:51:49 CEST 2011 x86_64 x86_64 x86_64 GNU/Linux

lsmod:
Module                  Size  Used by
vboxnetadp             13340  0 
vboxnetflt             28297  0 
vboxdrv               252684  2 vboxnetadp,vboxnetflt
radeon               1016468  0 
ttm                    72079  1 radeon
iwlagn                311183  0 
r8169                  55918  0
Comment 1 mlambda 2011-10-10 06:52:56 UTC
Created attachment 52174 [details]
kernel config
Comment 2 mlambda 2011-10-10 06:53:26 UTC
Created attachment 52175 [details]
/proc/cpuinfo
Comment 3 mlambda 2011-10-10 06:53:49 UTC
Created attachment 52176 [details]
dmesg
Comment 4 mlambda 2011-10-10 06:54:16 UTC
Created attachment 52177 [details]
dmidecode
Comment 5 mlambda 2011-10-10 06:54:53 UTC
Created attachment 52178 [details]
lspci -vvnn
Comment 6 mlambda 2011-10-10 06:55:29 UTC
Created attachment 52179 [details]
/var/log/syslog
Comment 7 mlambda 2011-10-10 06:56:04 UTC
Created attachment 52180 [details]
/var/log/Xorg.0.log
Comment 8 mlambda 2011-10-10 06:59:59 UTC
Created attachment 52181 [details]
/proc/mtrr
Comment 9 Chris Wilson 2011-10-10 07:03:32 UTC
And the bug is?
Comment 10 mlambda 2011-10-10 07:38:57 UTC
(In reply to comment #9)
> And the bug is?

Did you actually read the bug report? MTRR allocation fails even if I use the 'enable_mtrr_cleanup' kernel parameter (see Documentation/kernel-parameters.txt)

If this is not an error you should make the message a warning.
Comment 11 Chris Wilson 2011-10-10 07:45:18 UTC
(In reply to comment #10) 
> If this is not an error you should make the message a warning.

It is not even an error message, but an info and completely irrelevant for your hardware. Which is why I was interested to see if you observed any behaviour that supported your bug report.
Comment 12 mlambda 2011-10-10 07:53:31 UTC
(In reply to comment #11)
> (In reply to comment #10) 
> > If this is not an error you should make the message a warning.
> 
> It is not even an error message, but an info and completely irrelevant for your
> hardware. Which is why I was interested to see if you observed any behaviour
> that supported your bug report.

Sorry, I thought this was an error and should actually work.
Comment 13 Chris Wilson 2012-02-20 11:19:03 UTC
Created attachment 57345 [details] [review]
Suppress warning for MTRR allocation failure when using PAT
Comment 14 mlambda 2012-02-21 06:46:56 UTC
Thanks for your patch!
Comment 15 mlambda 2012-02-21 06:47:40 UTC
Thanks for your patch!
Comment 16 Florian Mickler 2012-07-01 03:35:10 UTC
A patch referencing this bug report has been merged in Linux v3.5-rc1:

commit 9e984bc1dffd405138ff22356188b6a1677c64c8
Author: Adam Jackson <ajax@redhat.com>
Date:   Wed Mar 14 11:22:11 2012 -0400

    drm/i915: Don't do MTRR setup if PAT is enabled
Comment 17 Jari Tahvanainen 2016-12-07 16:20:35 UTC
Closing old resolved+fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.